update the appointemntschema
